# pyeagleio

./: README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
pyeagleio/: __init__.py  datasource.py  https.py  jts.py  skeleton.py
tests/: conftest.py  test_datasource.py  test_https.py  test_jts.py  test_pyeagleio.py  test_skeleton.py
tests/data/: example-small.jts.json
