[tool.poetry]
name = "pyeagleio"
version = "0.1.0"
description = "Python library to interact with https://eagle.io/"
authors = ["Manu Lange <manulange_3@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
